[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Areana.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Game Objects/LDPlatform.png" type="Texture" id=2]
[ext_resource path="res://VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 3 )

[node name="Areana" type="Node2D"]
script = ExtResource( 1 )
ShrinkageX = 0.01
ShrinkageY = 0.01

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 18, 18 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="CheckArea" type="Area2D" parent="Sprite"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/CheckArea"]
position = Vector2( 2.38419e-07, 0 )
shape = SubResource( 2 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 5

[node name="Control" type="Control" parent="Node2D"]
margin_left = -1.0
margin_top = -1.0
margin_right = 39.0
margin_bottom = 39.0

[node name="Label" type="Label" parent="Node2D/Control"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -224.0
margin_top = -80.0
margin_right = 1.0
margin_bottom = -51.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 3 )

[node name="RestartButton" type="Button" parent="Node2D/Control"]
visible = false
margin_left = 24.0
margin_top = 116.0
margin_right = 141.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 4 )
disabled = true
text = "Restart"

[node name="MainmenuButton" type="Button" parent="Node2D/Control"]
visible = false
margin_left = -138.0
margin_top = 116.0
margin_right = -20.5313
margin_bottom = 140.0
custom_fonts/font = SubResource( 5 )
disabled = true
text = "Main Menu"

[connection signal="area_exited" from="Sprite/CheckArea" to="." method="_on_CheckArea_area_exited"]
[connection signal="pressed" from="Node2D/Control/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Node2D/Control/MainmenuButton" to="." method="_on_MainmenuButton_pressed"]
